--- a/Cascading-Style-Sheet.css
+++ b/Cascading-Style-Sheet.css
@@ -1,3 +1,20 @@
+footer {
+  background: black;
+  color: gray;
+  font-size 12px;
+  padding: 20px 20px;
+  text-align: center;
+}
+@media screen and (max-width: 400px){
+  .features{
+    background: white;
+  }
+}
+@media screen and (max-width: 800px){
+  .features{
+    background: white;
+  }
+}
 body {
 background-color: #d3d3d3 ;
 }
@@ -13,6 +30,14 @@ h2 {
 }
   a{
   color: yellow;
+}
+h3 {
+  font-size: 30;
+  color: blue;
+}
+h4 {
+  font-size: 20;
+  color: red;
 }
 head {
   text-align: center;
