--- a/Cascading-Style-Sheet.css
+++ b/Cascading-Style-Sheet.css
@@ -1,6 +1,6 @@
 
 body {
-background-image: url("";)
+background-image: url("NewBackground/yes.jpg";)
 }
 h1 {
   text-align: center;
@@ -13,7 +13,7 @@ h2 {
   color: blue;
 }
   a{
-  color: yellow;
+  color: green;
 }
 h3 {
   font-size: 30;
