--- a/Cascading-Style-Sheet.css
+++ b/Cascading-Style-Sheet.css
@@ -25,7 +25,7 @@ h5 {
 }
 h4 {
   font-size: 20;
-  color: red;
+  color: white;
 }
 head {
   text-align: center;
@@ -34,4 +34,14 @@ head {
 }
 .hidden {
   display: none;
+}
+
+.centered-input {
+  display: block;
+  width: 150px;
+  margin: 0 auto;
+}
+
+.boxed{
+  border: 15px solid green ;
 }
