Style for Sign in and up

--- a/Cascading-Style-Sheet.css
+++ b/Cascading-Style-Sheet.css
@@ -2,6 +2,10 @@
 body {
 background-image: url("";)
 }
+div {
+  background-color: green;
+  width: 1000px;
+}
 h1 {
   text-align: center;
   font-size: 60;
