--- a/Style For Sign In and Out.css
+++ b/Style For Sign In and Out.css
@@ -1,23 +1,32 @@
 
 body {
 background-color: #C4DAF9;
+font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 div {
-  background-color: red;
-  width: 1000px;
+  background-color: 65C459;
+  border-radius: 50px;
+  padding: 25;
+  width: 500px;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -250px;
 }
 h1 {
   text-align: center;
-  font-size: 60;
-  color: blue;
-}
-h2 {
-  text-align: left;
   font-size: 40;
   color: blue;
 }
+h2 {
+  text-align: center;
+  font-size: 30;
+  color: black;
+}
   a{
-  color: yellow;
+  color: blue;
 }
 h3 {
   font-size: 30;
@@ -31,10 +40,15 @@ h4 {
   font-size: 20;
   color: red;
 }
+p {
+  color: black;
+  text-align: left;
+}
 head {
   text-align: center;
   font-size: 100;
-  color: blue;
+  background-color: 65C459;
+  padding: 60px;
 }
 .hidden {
   display: none;
