--- a/Style For Sign In and Out.css
+++ b/Style For Sign In and Out.css
@@ -2,9 +2,10 @@
 body {
 background-color: #C4DAF9;
 font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+margin: 0px;
 }
 div {
-  background-color: 65C459;
+  background-color: #56A94B;
   border-radius: 50px;
   padding: 25;
   width: 500px;
@@ -44,11 +45,10 @@ p {
   color: black;
   text-align: left;
 }
-head {
-  text-align: center;
-  font-size: 100;
-  background-color: 65C459;
-  padding: 60px;
+header {
+  font-size: 40;
+  background-color: #56A94B;
+  height: 75px;
 }
 .hidden {
   display: none;
