--- a/Cascading-Style-Sheet.css
+++ b/Cascading-Style-Sheet.css
@@ -2,10 +2,6 @@
 body {
 background-color: CornflowerBlue;
 }
-div {
-  background-color: green;
-  width: 1000px;
-}
 h1 {
   text-align: center;
   font-size: 60;
@@ -45,9 +41,18 @@ head {
   width: 150px;
   margin: 0 auto;
 }
-
+div {
+  background-color: 65C459;
+  border-radius: 50px;
+  padding: 70;
+  width: 500px;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -140px;
+  margin-left: -250px;
+}
 .boxed{
   border: 15px solid green ;
-  padding: 50px color: green;
-  margin: 20px color: green;
 }
