--- a/Style For Home.css
+++ b/Style For Home.css
@@ -9,11 +9,11 @@ div {
   border-radius: 50px;
   padding: 25;
   width: 500px;
-  height: 300px;
+  height: 200px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -150px;
+  margin-top: -100px;
   margin-left: -250px;
 }
 h1 {
@@ -22,7 +22,9 @@ h1 {
   color: black;
 }
 h2 {
+  margin: 0px;
   text-align: center;
+  text-indent: -75px;
   font-size: 30;
   color: black;
 }
@@ -37,11 +39,11 @@ h3 {
 }
 h5 {
   font-size: 20:
-  color: green;
+  color: black;
 }
 h4 {
   font-size: 20;
-  color: red;
+  color: black;
 }
 p {
   color: black;
